tests/ui/empty_function_body.stderr
error: custom attribute panicked
 --> tests/ui/empty_function_body.rs:3:1
  |
3 | #[add]
  | ^^^^^^
  |
  = help: message: The function body must be empty
